--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf node_modules && npm install",
     "server": "node ./server/server.js",
     "dev:server": "nodemon ./server/server.js",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
+    "dev:all": "concurrently \"npm run dev -- --host\" \"npm run dev:server\"",
     "seed": "node ./server/utils/seedData.js"
   },
   "dependencies": {
