--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview",
     "clean": "rm -rf node_modules && npm install",
     "server": "node ./server/server.js",
-    "dev:server": "nodemon ./server/server.js",
-    "dev:all": "concurrently \"npm run dev -- --host\" \"npm run dev:server\"",
-    "seed": "node ./server/utils/seedData.js"
+    "dev:server": "nodemon --delay 2500ms ./server/server.js",
+    "dev:all": "concurrently -k \"npm run dev\" \"npm run dev:server\"",
+    "seed": "node ./server/utils/seedData.js",
+    "start": "node server/server.js",
+    "render-build": "npm install && npm run build"
   },
   "dependencies": {
     "axios": "^1.8.3",
@@ -26,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.13.0",
+    "next-themes": "^0.4.6",
     "node": "^20.19.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -50,5 +53,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
