hosting setup changings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peki-senior-high-voting",
+  "name": "e-voting-peki-senior-high-school",
   "private": true,
   "version": "0.0.0",
   "type": "module",
