--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-VITE_API_URL=https://evoting-api.onrender.com
-ALLOWED_ORIGIN=https://evoting-frontend.onrender.com
+VITE_API_URL=https://e-voting-api-jsfc.onrender.com
+ALLOWED_ORIGIN=https://e-voting-frontend-5q4z.onrender.com
+NODE_ENV=production
