--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:all": "concurrently -k \"npm run dev\" \"npm run dev:server\"",
     "seed": "node ./server/utils/seedData.js",
     "start": "node server/server.js",
-    "render-build": "npm install && npm run build"
+    "render-build": "npm install && npm run build && cp -r dist server/"
   },
   "dependencies": {
     "axios": "^1.8.3",
