--- a/render.yaml
+++ b/render.yaml
@@ -11,19 +11,29 @@ services:
         value: production
       - key: PORT
         value: 10000
-      - key: MONGODB_URI
-        sync: false # You'll set this in Render dashboard
-      - key: JWT_SECRET
-        sync: false # You'll set this in Render dashboard
       - key: ALLOWED_ORIGIN
         value: https://e-voting-frontend-5q4z.onrender.com
+      - fromGroup: mongodb-config
 
   # Frontend static site
-  - type: static
+  - type: web
     name: e-voting-frontend
+    env: static
     plan: free
-    buildCommand: npm run render-build
-    publishDir: dist
+    buildCommand: npm install && npm run build
+    staticPublishPath: ./dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://e-voting-api-jsfc.onrender.com
+
+envVarGroups:
+  - name: mongodb-config
+    envVars:
+      - key: MONGODB_URI
+        sync: false
+      - key: JWT_SECRET
+        sync: false
